--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,6 +14,7 @@
 <body>
 		<aside id="modall" class="modall">
 		<div class="modalwrapper">
+			<section id="one" class="hidden">
 			<div class="modal">
 			<h3 class="windowstitle">Galerie Photo</h3>
 			<button id="closemodal" class="closemodal"><i class="fa-solid fa-xmark"></i></button>
@@ -23,8 +24,46 @@
 	<div class="add">
 	<button id="addphoto" class="addphoto">Ajouter une photo</button>
 	</div>
+	</section>
+	<section id="ajoutpictures" class="two hidden">
+		<div class="modaldeux">
+		<button id="back" class="back"><i class="fa-solid fa-arrow-left"></i></button>
+		<button id="clostwo" class="closetwo"><i class="fa-solid fa-xmark"></i></button>
 		</div>
+		<h3 class="ajout">Ajout photo</h3>
+			<form id="formulaire">
+				<div class="uploader">
+				<label for="file-input" class="labelupload">
+					<img id="preview" class="preview hidden" src="#" alt="Aperçu de l'image" />
+					<div class ="icon-upload hidden">
+					<i class="fa-regular fa-image"></i>	
+					</div>
+					</label>
+					<button id ="upload-button" class="upload-button">
+							<p>+Ajouter une photo</p>
+				<input id="file-input" type="file" accept="image/png, image/jpeg"
+				style="display: none;"/>
+				</button>
+				<p>jpg, png : 4mo max</p>
+				</div>
+				<div class="choices">
+				<label for="titre" class="titre">titre</label>
+				<input type="text" id="titre" name="title" class="title-input"/>
+				<label for="categorie" class="categorie">catégorie</label>
+				<select id="categorie" name="category" class="category-input">
+				<option value="">--Choisir une catégorie--</option>
+				</select>
+				</div>
+			<button type="submit" class="valider">valider</button>
+			</form>
+		</section>
+			</div>
+		</div>
+		</div>
+	</section>
 		</aside>
+
+
 	<div id="bar" class="barhidden">
 		<span><i class="fa-regular fa-pen-to-square"></i>mode édition</span>
 	</div>
@@ -83,5 +122,5 @@
 	</nav>
 </footer>
 </body>
-<script src="app.js"></script>"
+<script src="index.js"></script>"
 </html>
